fix: no more flash -- for dark mode users. Light mode users can suffer

--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,9 @@
 body::-webkit-scrollbar {
 	display: none;
 }
+body {
+	background: #232530;
+}
 
 #tsp1 canvas,
 #tsp2 canvas {
